--- a/memberberry.html
+++ b/memberberry.html
@@ -36,6 +36,19 @@
     <header>
       <div id="navbar" data-toggle="collapse">
         <nav class="top-nav" id="my-topnav">
+          <a
+            class="logo-link"
+            href="index.html"
+            role="menu-image"
+            target="_self"
+          >
+            <img
+              src="./img/crue_logo_new.svg"
+              alt="crue logo"
+              height="48"
+              width=""
+            />
+          </a>
           <a href="index.html" role="menuitem" target="_self">Home</a>
           <a href="about.html" role="menuitem" target="_self">About Crue</a>
           <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
