--- a/work.html
+++ b/work.html
@@ -25,18 +25,31 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
-    <link
+    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
+    <!-- <link
       rel="stylesheet"
       type="text/css"
       href="dist/css/style.production.css"
-    />
+    /> -->
   </head>
 
   <body>
     <header>
       <div id="navbar" data-toggle="collapse">
         <nav class="top-nav" id="my-topnav">
+          <a
+            class="logo-link"
+            href="index.html"
+            role="menu-image"
+            target="_self"
+          >
+            <img
+              src="./img/crue_logo_new.svg"
+              alt="crue logo"
+              height="48"
+              width=""
+            />
+          </a>
           <a href="index.html" role="menuitem" target="_self">Home</a>
           <a href="about.html" role="menuitem" target="_self">About Crue</a>
           <a href="work.html" role="menuitem" target="_self" class="active"
@@ -53,7 +66,9 @@
 
     <div class="content">
       <section class="project-container">
-        <h1 class="main-title">My Projects</h1>
+        <h1 class="secondary-title">
+          My <span class="crue-span">Projects</span>
+        </h1>
         <div class="grid">
           <div class="grid__item">
             <h2>myFlix</h2>
@@ -142,10 +157,6 @@
           /></a>
         </div>
       </footer>
-    </div>
-
-    <div class="logo-container">
-      <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
     </div>
 
     <script src="src/js/navhide.js"></script>
