--- a/work.html
+++ b/work.html
@@ -25,12 +25,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
-    <!-- <link
+    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+
+    <link
       rel="stylesheet"
       type="text/css"
       href="dist/css/style.production.css"
-    /> -->
+    />
   </head>
 
   <body>
