update styling for all work pages

--- a/about.html
+++ b/about.html
@@ -104,31 +104,31 @@
 
         <div class="about-slides fade">
           <div class="number-text">2 / 6</div>
-          <img src="" class="about-me__images" />
+          <img src="img/hiking.jpeg" class="about-me__images" />
           <div class="captions">Hiking</div>
         </div>
 
         <div class="about-slides fade">
           <div class="number-text">3 / 6</div>
-          <img src="" class="about-me__images" />
+          <img src="img/coding.jpeg" class="about-me__images" />
           <div class="captions">Coding</div>
         </div>
 
         <div class="about-slides fade">
           <div class="number-text">4 / 6</div>
-          <img src="" class="about-me__images" />
+          <img src="img/camping.jpg" class="about-me__images" />
           <div class="captions">Camping</div>
         </div>
 
         <div class="about-slides fade">
           <div class="number-text">5 / 6</div>
-          <img src="" class="about-me__images" />
+          <img src="img/hunting_2.jpg" class="about-me__images" />
           <div class="captions">Hunting</div>
         </div>
 
         <div class="about-slides fade">
           <div class="number-text">6 / 6</div>
-          <img src="" class="about-me__images" />
+          <img src="img/fishing.jpg" class="about-me__images" />
           <div class="captions">Fishing</div>
         </div>
 
