--- a/memberberry.html
+++ b/memberberry.html
@@ -66,7 +66,9 @@
 
     <div class="project-content">
       <main class="project-container">
-        <h1>Memberberry</h1>
+        <h1 class="secondary-title">
+          Member-<span class="crue-span">berry</span>
+        </h1>
         <p>
           <a
             href="https://cruebee.github.io/memberberry/"
