--- a/poke-tracker.html
+++ b/poke-tracker.html
@@ -25,6 +25,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" -->
+
     <link
       rel="stylesheet"
       type="text/css"
@@ -66,7 +67,7 @@
 
     <div class="project-content">
       <main class="project-container">
-        <h1>Pokedex</h1>
+        <h1 class="secondary-title">Poke-<span class="crue-span">dex</span></h1>
         <p>
           <a
             href="https://cruebee.github.io/jQuery-poke-tracker/"
