--- a/quiztron.html
+++ b/quiztron.html
@@ -24,7 +24,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" -->
+    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+
     <link
       rel="stylesheet"
       type="text/css"
@@ -66,7 +67,9 @@
 
     <div class="project-content">
       <main class="project-container">
-        <h1>Quiztron</h1>
+        <h1 class="secondary-title">
+          Quiz-<span class="crue-span">tron</span>
+        </h1>
         <p>
           <a
             href="https://cruebee.github.io/quiztron-app/welcome"
