--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
         </h1>
         <div class="grid">
           <div class="grid__item">
-            <h2>myFlix</h2>
+            <h2>my<span class="crue-span">Flix</span></h2>
             <p class="proj-desc">
               I designed and created both the frontend and backend for a movie
               lover's app. Here users can create profiles, view a list of movies
@@ -82,7 +82,7 @@
             <a class="button projects" href="cruebeeflix.html">Mmmmovies!</a>
           </div>
           <div class="grid__item">
-            <h2>Quiztron</h2>
+            <h2>Quiz-<span class="crue-span">tron</span></h2>
             <p class="proj-desc">
               Quiztron was developed to test out some of the features that
               Angular has to offer. This project introduced new technologies and
@@ -92,7 +92,7 @@
             <a class="button projects" href="quiztron.html">Take a quizzy!</a>
           </div>
           <div class="grid__item">
-            <h2>Memberberry</h2>
+            <h2>Member-<span class="crue-span">berry</span></h2>
             <p class="proj-desc">
               A simple To-Do app to help you member! I developed this
               application with Vue.js, and experimented a little with Vue
@@ -104,7 +104,7 @@
             >
           </div>
           <div class="grid__item">
-            <h2>meetemup</h2>
+            <h2>Meet-<span class="crue-span">em</span>-up</h2>
             <p class="proj-desc">
               Check out the meetemup app! This app interacts with the meetup
               API. Here users can login with OAUTH, and browse a list of events
@@ -114,7 +114,7 @@
             <a href="meetemup.html" class="button projects">Meetemup app</a>
           </div>
           <div class="grid__item">
-            <h2>Pokedex</h2>
+            <h2>Poke-<span class="crue-span">dex</span></h2>
             <p class="pokedex-desc">
               This application is all about HTML5, CSS, jQuery, and JavaScript.
               The styling for this app was created with the help Bootstrap, and
@@ -124,7 +124,7 @@
             <a href="poke-tracker.html" class="button projects">Pokedex</a>
           </div>
           <div class="grid__item">
-            <h2>ChatterBox</h2>
+            <h2>Chatter<span class="crue-span">Box</span></h2>
             <p class="proj-desc">
               ChatterBox is a React Native project exploring the process of
               creating and implementing code for both iPhone, and Android users
