--- a/meetemup.html
+++ b/meetemup.html
@@ -68,7 +68,9 @@
 
     <div class="project-content">
       <main class="project-container">
-        <h1>meetemup</h1>
+        <h1 class="secondary-title">
+          meet-<span class="crue-span">em</span>-up
+        </h1>
         <p>
           <a
             href="https://cruebee.github.io/meetemup/"
