update contact form new php?

--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
             <div class="row">
               <div class="col-form_label">
                 <label class="contact-label" for="email"
-                  ><span class="required-field">*</span>Email
+                  ><span class="required-field">*</span>Your Email
                 </label>
               </div>
               <div class="col-form_input">
