Why not try some PHP?

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
           Contact <span class="crue-span">Crue</span>
         </h1>
         <div class="contact-card">
-          <form method="post" action="contact.php" class="contact-form">
+          <form method="post" action="mail-handler.php" class="contact-form">
             <div class="row">
               <div class="col-form_label">
                 <label class="contact-label" for="full-name">
