update portfolio with mailer that works, and a rerouted thank-you page boom f-ing nailed it.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, height=device-height, initial-scale=1"
     />
-    <title>Crue Jameson - Portfolio</title>
+    <title>Crue Jameson</title>
     <!-- Is the following code the most effective way to add in a favicon downloaded from the internet? -->
     <link
       rel="icon"
