remove contrast checker js

--- a/contact.html
+++ b/contact.html
@@ -155,19 +155,23 @@
           2215 N. Overland Trl.<br />
           80521<br />
           USA<br />
+          Email: ericcjameson@gmail.com<br />
+          Phone: (970)-980-8519<br />
         </div>
-        <a href="tel:+1-970-980-8519" class="button connection"
-          >Tel: (970)-980-8519</a
-        >
+        <a href="tel:+1-970-980-8519" class="button connection">Call Me! </a>
         <br />
-        <a href="skype:cruebeedoobie" class="button connection"
-          >Skype: @cruebeedoobie
-        </a>
+        <a href="skype:cruebeedoobie" class="button connection">Skype Me! </a>
         <a href="mailto:ericcjameson@gmail.com" class="button connection"
-          >Email: ericcjameson@gmail.com
+          >Email Me!
         </a>
       </div>
     </section>
+
+    <div class="logo-container">
+      <a href="mailto:cruebeedooobie@gmail.com">
+        <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
+      </a>
+    </div>
 
     <div class="foot-wrap">
       <footer class="page-footer">
@@ -191,12 +195,8 @@
       </footer>
     </div>
 
-    <div class="logo-container">
-      <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
-    </div>
-
     <script src="src/js/navhide.js"></script>
     <script src="src/js/burgermenu.js"></script>
-    <script src="src/js/tota11y.min.js"></script>
+    <!-- <script src="src/js/tota11y.min.js"></script> -->
   </body>
 </html>
