--- a/poke-tracker.html
+++ b/poke-tracker.html
@@ -160,6 +160,6 @@
 
     <script src="src/js/navhide.js"></script>
     <script src="src/js/burgermenu.js"></script>
-    <script src="src/js/tota11y.min.js"></script>
+    <!-- <script src="src/js/tota11y.min.js"></script> -->
   </body>
 </html>
