--- a/cruebeeflix.html
+++ b/cruebeeflix.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/style.production.css"
+      href="dist/css/styles_version2.0.css"
     />
   </head>
 
@@ -90,11 +90,17 @@
             >API</a
           >
         </p>
+
         <img
           class="app-image"
           src="img/cruebeeflix-image.jpeg"
           alt="myFlix app screenshot"
         />
+
+        <p>
+          (please note myFlix takes a nap when not in use. If it takes longer
+          than 30 seconds to load please try again.)
+        </p>
         <div class="grid">
           <div class="grid__item">
             <h2>Objective</h2>
@@ -159,12 +165,11 @@
       </footer>
     </div>
 
-    <div class="logo-container">
-      <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
-    </div>
-
-    <script src="src/js/navhide.js"></script>
     <script src="src/js/burgermenu.js"></script>
+    <!-- 
+      ** Hide navhide.js until ios scroll up issue resolved **
+      <script src="src/js/navhide.js"></script> 
+    -->
     <!-- <script src="src/js/tota11y.min.js"></script> -->
   </body>
 </html>
