--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/style.production.css"
+      href="dist/css/styles_version2.0.css"
     />
   </head>
 
@@ -160,8 +160,11 @@
       </footer>
     </div>
 
-    <script src="src/js/navhide.js"></script>
     <script src="src/js/burgermenu.js"></script>
+    <!-- 
+      ** Hide navhide.js until ios scroll up issue resolved **
+      <script src="src/js/navhide.js"></script> 
+    -->
     <!-- <script src="src/js/tota11y.min.js"></script> -->
   </body>
 </html>
