--- a/memberberry.html
+++ b/memberberry.html
@@ -25,10 +25,11 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/style.production.css"
+      href="dist/css/styles_version2.0.css"
     />
   </head>
 
@@ -151,8 +152,11 @@
       <img src="img/crue_logo.svg" class="app-logo" alt="Crue Jameson" />
     </div>
 
-    <script src="src/js/navhide.js"></script>
     <script src="src/js/burgermenu.js"></script>
+    <!-- 
+      ** Hide navhide.js until ios scroll up issue resolved **
+      <script src="src/js/navhide.js"></script> 
+    -->
     <!-- <script src="src/js/tota11y.min.js"></script> -->
   </body>
 </html>
