--- a/thank-you.html
+++ b/thank-you.html
@@ -29,9 +29,10 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/style.production.css"
+      href="dist/css/styles_version2.0.css"
     />
   </head>
+
   <body style="background-color: var(--primary-background);">
     <div style="margin: 10%;">
       <h1 class="main-title">Message <span class="crue-span">Sent!</span></h1>
